<resources>
    <string name="app_name">TodoApp</string>
    <string name="textfeldTitel">Titel</string>
    <string name="textfeldBeschreibung">Beschreibung</string>
    <string name="btnErstellen">Erstellen</string>
    <string name="btnAbbrechen">Abbrechen</string>
    <string name="textViewPrio">Priorität:</string>
    <string name="kategorie">Kategorie</string>
    <string name="kategorieWaehlen">Kategorie auswählen</string>
    <string name="loeschen">Löschen</string>
    <string name="aktualisieren">Aktualisieren</string>
    <string name="datum">Datum Auswählen</string>
    <string name="btnUpdateItem">ok</string>
    <string name="editTextUpdateItem">ok</string>
    <string name="updateItem">Update Item</string>
    <string name="menuItem">Settings</string>
    <string name="selectKategorie">Wähle Kategorie aus</string>
    <string name="title_activity_settings">Settings</string>
    <string name="days_left1">Noch</string>
    <string name="days_left">Tag/e</string>
    <string name="prioritaetAusblenden">Priorität Anzeige ausblenden</string>

    <!-- Preference Titles -->
    <string name="text">Text</string>

    <!-- Messages Preferences -->
    <string name="text_size" translatable="false">Text size</string>

</resources>
